refactor: upsert currency (#14)
* refactor: repository method to upsert

* refactor: use same timestamps in new currency

* feat: add default rate mapping

* refactor: change create endpoint to upsert

* chore: indirect dependency

* chore: rename funcs

* chore: rename files
