# docs/swagger.yaml
@@ -49,10 +49,12 @@ info:
   version: 0.1.0
 paths:
   /currencies:
-    post:
+    put:
       consumes:
       - application/json
-      description: Creates an exchange rate from a specified currency to USD.
+      description: |-
+        Creates an exchange rate from a specified currency to USD.
+        If an exchange rate already exists, updates it.
       parameters:
       - description: Currency Info
         in: body
@@ -71,15 +73,15 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/responses.ErrorPayload'
-        "409":
-          description: Conflict
+        "422":
+          description: Unprocessable Entity
           schema:
             $ref: '#/definitions/responses.ErrorPayload'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/responses.ErrorPayload'
-      summary: Create a new currency exchange rate
+      summary: Upsert currency exchange rate to usd
       tags:
       - Currency
   /currencies/conversion:
